# darp

./: .Dockerfile.swp  .builddarp.bash.swp  .genesisnodelist.config.swp  .gitignore  .startAll.bash.swp  71.202.1.120.65013.json  71.202.2.184.65013.json  Build.200327.1223  Build.200327.1227  Build.200327.1232  Build.200327.1302  Build.200327.1307  Build.200327.1318  Build.200327.1338  Build.200327.1346  Build.200327.1421  Build.200327.1428  Build.200327.1436  Build.200327.1438  Build.200327.1441  Build.200327.1448  Build.200327.1454  Build.200327.1458  Build.200327.1459  Build.200327.1514  Build.200327.1549  Build.200327.1624  Build.200327.1630  Build.200327.1658  Build.200327.1706  Build.200327.1728  Build.200327.1746  Build.200327.1809  Build.200327.1820  Build.200327.1927  Build.200327.1939  Build.200327.2129  Build.200328.0632  Build.200328.0643  Build.200328.0648  (+7776 more)
alpha1.5/: alpha1.5.html
alpha1.7/: alpha1.7.html
better_paths/: Cargo.toml
boot/: boot.js  boot.ts
config/: config.js  config.ts  dump.rdb
darp.hype/: data.plist
darp.hyperesources/: AF94F0-restorable.plist  HYPE-664.full.min.js  darp_hype_generated_script.js
darpC/: Makefile  TCP_Client.c  UDP_client.c  handlePulse  handlePulse.c  hostfile  pulser  pulser.c  ser  server.c  tcpcli  udpcli
express/: express.js  express.ts
fetchCode/: fetchCode.js  fetchCode.ts
handlepulse/: handlepulse.bash  handlepulse.js  handlepulse.ts  processPulse.js  (+2 more)
rust/client/: Cargo.toml  run_many_clients.sh
rust/client/src/: config.rs  main.rs
rust/server/: Cargo.toml
rust/server/src/: config.rs  main.rs
(+97 files in other folders)
