[package]
name = "client"
version = "0.1.0"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"

netcode = {version = "*", path = "../netcode"}

tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"

serde = "1.0.104"
bincode = "1.2.1"

log = "0.4.8"
env_logger = "0.7.1"

chrono = "0.4.19"