[package]
name = "server"
version = "0.1.0"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"


[dependencies]
structopt = "0.3"

netcode = {version = "0.1.0", path = "../netcode"}

tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }

futures = "0.3.0"

serde = "1.0.104"
bincode = "1.2.1"

log = "0.4.8"
simple_logger = "1.4.0"

